--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 driver=org.postgresql.Driver
 url=jdbc:postgresql://localhost:5432/postgres
-username=postgres
+username=vera
 password=postgres
 
 server.error.whitelabel.enabled=false
